code updated with password reset functions and error html

--- a/Flask_User_Registration_task/templates/base.html
+++ b/Flask_User_Registration_task/templates/base.html
@@ -8,7 +8,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Sąskaitų programa</title>
+    <title>Biudžetas - patobulintas</title>
 
     <!-- Bootstrap core CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
@@ -22,7 +22,7 @@
 <!-- Navigation -->
 <nav class="navbar navbar-expand-lg navbar-dark bg-primary static-top">
     <div class="container">
-        <a class="navbar-brand" href="/">Vartotojai</a>
+        <a class="navbar-brand" href="/">Biudžetas</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive"
                 aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -39,8 +39,14 @@
                 <li class="nav-item">
                     <a class="nav-link" href="/irasai">Įrašai</a>
                 </li>
+               <li class="nav-item">
+                    <a class="nav-link" href="/balansas">Balansas</a>
+                </li>
                 <li class="nav-item">
                     <a class="nav-link" href="/paskyra">Paskyra</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/admin">Admin</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="/atsijungti">Atsijungti</a>
@@ -52,6 +58,7 @@
                 <li class="nav-item">
                     <a class="nav-link" href="/prisijungti">Prisijungti</a>
                 </li>
+
                 {% endif %}
             </ul>
         </div>
