--- a/Flask_User_Registration_task/templates/irasai.html
+++ b/Flask_User_Registration_task/templates/irasai.html
@@ -1,10 +1,27 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>$Title$</title>
-</head>
-<body>
-$END$
-</body>
-</html>
+{% extends "base.html" %}
+
+{% block content %}
+
+{% if visi_irasai %}
+{% for irasas in visi_irasai.items %}
+<hr>
+<p>Suma: {{irasas.suma}}</p>
+<p>Data: {{ datetime.strftime(irasas.data, "%Y-%m-%d %H:%M:%S")}}</p>
+{% endfor %}
+<hr>
+{% for page_num in visi_irasai.iter_pages(left_edge=1, right_edge=1, left_current=1, right_current=2) %}
+  {% if page_num %}
+    {% if visi_irasai.page == page_num %}
+      <a class="btn btn-info mb-4" href="{{ url_for('records', page=page_num) }}">{{ page_num }}</a>
+    {% else %}
+      <a class="btn btn-outline-info mb-4" href="{{ url_for('records', page=page_num) }}">{{ page_num }}</a>
+    {% endif %}
+  {% else %}
+    ...
+  {% endif %}
+{% endfor %}
+{% endif %}
+
+<p><a href="{{ url_for('new_record')}}">Naujas įrašas</a></p>
+
+{% endblock %}
