--- a/Flask_User_Registration_task/templates/prideti_irasa.html
+++ b/Flask_User_Registration_task/templates/prideti_irasa.html
@@ -1,10 +1,14 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>$Title$</title>
-</head>
-<body>
-$END$
-</body>
-</html>
+{% extends "base.html" %}
+
+{% block content %}
+
+<form method="post" action="#">
+    {{ form.hidden_tag() }}
+    <div class="form-group">
+        {{ form.suma.label(class="form-control-label") }}
+        {{ form.suma(class="form-control") }}
+    </div>
+    <br>
+    {{ form.submit }}
+</form>
+{% endblock %}
