error templates updated

--- a/Flask_User_Registration_task/templates/403.html
+++ b/Flask_User_Registration_task/templates/403.html
@@ -4,5 +4,6 @@
     <div class="content-section">
         <h1>Jūs neturite teisių atlikti šio veiksmo (403)</h1>
         <p>Patikrinkite savo paskyrą ir bandykite dar kartą</p>.
+        <p>{{original}}</p>
     </div>
 {% endblock %}
