--- a/Flask_User_Registration_task/templates/404.html
+++ b/Flask_User_Registration_task/templates/404.html
@@ -4,5 +4,6 @@
     <div class="content-section">
         <h1>Oops. Puslapis nerastas (404)</h1>
         <p>Šis puslapis neegzistuoja. Pabandykite įvesti kitą adresą</p>.
+        <p>{{original}}</p>
     </div>
 {% endblock %}
