--- a/Flask_User_Registration_task/templates/500.html
+++ b/Flask_User_Registration_task/templates/500.html
@@ -4,5 +4,6 @@
     <div class="content-section">
         <h1>Kažkas negerai (500)</h1>
         <p>Serveris laikinai neveikia. Bandykite vėliau</p>.
+        <p>{{original}}</p>
     </div>
 {% endblock %}
